styles: fixisng scrollbar styling

--- a/styles/base.css
+++ b/styles/base.css
@@ -24,19 +24,14 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #999;
-  border-radius: 10px;
+  background-color: var(--bege);
 }
 
 /* Optional: thinner on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #777;
 }
-/* Firefox */
-html {
-  scrollbar-width: thin;
-  scrollbar-color: #999 transparent;
-}
+
 /* Global Reset */
 * {
   margin: 0;
